// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home.ads hasBanner report 1`] = `
Array [
  Array [
    Object {
      "block": "ads",
      "level": "warn",
      "message": "Should not request report as a banner",
    },
  ],
]
`;

exports[`home.ads hasBanner без id 1`] = `
Array [
  Array [
    Object {
      "block": "ads",
      "message": "No id for hasBanner",
    },
  ],
]
`;

exports[`home.ads report повторный репорт возвращает пустую строчку 1`] = `
Array [
  Array [
    Object {
      "block": "ads",
      "level": "warn",
      "message": "Report had already placed",
    },
  ],
]
`;

exports[`home.ads ручной режим репорта через {report:false} и getShowUrl getShowUrl возвращает пустую строку для баннера, linknext которого уже был отгружен через report 1`] = `
Array [
  Array [
    Object {
      "block": "ads",
      "level": "warn",
      "message": "getShowUrl after reporting",
    },
  ],
]
`;
